Fixed overflow

--- a/src/output.css
+++ b/src/output.css
@@ -1690,6 +1690,10 @@ video {
     width: 66.666667%;
   }
 
+  .md\:w-80{
+    width: 20rem;
+  }
+
   .md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
